--- a/assessment/src/App.css
+++ b/assessment/src/App.css
@@ -1,38 +1,56 @@
-.App {
+body {
+  font-family: 'Open Sans', sans-serif;
+  /* font-family: 'Roboto Condensed', sans-serif;
+     font-family: 'Roboto Slab', serif; */
+}
+.search-section {
+  background-image: url('./assets/shutterstock_42474535.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 378px;
+  flex-direction: column;
+}
+.search-text {
+  width: 40%;
+}
+.search-text h3 {
+  font-family: 'Roboto Slab', serif;
+  font-size: 24px;
+  font-weight: normal;
+  color: #f3f6f9;
+  line-height: 36px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main-searchbar {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+.main-search-input {
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  font-style: italic;
+  width: 350px;
+  height: 35px;
+  padding-left: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main-search-button {
+  border: 1px #0074C1;
+  background-color: #0074C1;
+  display: flex;
+  gap: 5px;
+  padding: 0px 20px 0px 20px;
+}
+.main-search-button p {
+  color: #f3f6f9;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  letter-spacing: .5px;
+  font-size: 13px;
+}
+.search-icon {
+  height: 20px;
+  padding-top: 13px;
 }
