--- a/assessment/src/App.css
+++ b/assessment/src/App.css
@@ -100,7 +100,7 @@ body {
   font-weight: 900;
   font-size: 30px;
 }
-.block {
+.services-block {
   background-color: #1b3a61;
   padding: 5px;
 }
@@ -115,4 +115,42 @@ body {
   font-weight: bold;
   width: 16vw;
   padding-top: 4vh;
+}
+/* Updates & Calendar Section */
+.updates-calendar-section {
+  margin-left: 9rem;
+  margin-right: 9rem;
+  display: flex;
+  column-gap: 50%;
+}
+.uc-block {
+  background-color: #8C6910;
+  padding: 2px;
+  width: 3vw;
+  margin-bottom: 5vh;
+}
+.generic-text {
+  font-size: 16px;
+  line-height: 22px;
+  margin-bottom: 0;
+}
+.published-text {
+  display: flex;
+  gap: 5px;
+  font-size: 13px;
+  color: #666666;
+}
+.grey-tag {
+  background-color: #666666;
+  color: white;
+  padding: 3px;
+  border-radius: 3px;
+}
+.view-more {
+border: 1px #0074c1;
+background-color: #0074c1;
+color: white;
+padding: 15px 20px 15px 20px;
+margin-left: 9rem;
+margin-right: 9rem;
 }
