--- a/assessment/src/App.css
+++ b/assessment/src/App.css
@@ -156,13 +156,10 @@ border: 1px #0074c1;
 background-color: #0074c1;
 color: white;
 padding: 15px 20px 15px 20px;
-margin-left: 4rem;
-margin-right: 4rem;
 }
 .event-container {
   display: flex;
   gap: 30px;
-  border-bottom: 1px solid #c3c3c3;
 }
 .date-box {
   background-color: #8C6910;
@@ -191,12 +188,13 @@ margin-right: 4rem;
   padding: 3px;
   border-radius: 3px;
   width: fit-content;
+  margin: 0;
 }
 .detail {
   display: flex;
   gap: 5px;
-  padding-top: 8px;
   padding-bottom: 10px;
+
 }
 .detail img {
   width: 24px;
@@ -205,3 +203,33 @@ margin-right: 4rem;
 .detail-text {
   margin: 0;
 }
+.red-tag {
+  background-color: #E9261D;
+  color: white;
+  font-weight: 900;
+  font-size: small;
+  padding: 3px;
+  border-radius: 3px;
+  width: fit-content;
+}
+.second-box, .third-box ,.fourth-box {
+margin-top: 13px;
+}
+.first-event, .second-event, .third-event {
+  border-bottom: 1px solid #c3c3c3;
+}
+.view-all-events {
+  border: 1px #0074c1;
+  background-color: #0074c1;
+  color: white;
+  padding: 15px 20px 15px 20px;
+  margin-top: 15vh;
+  width: max-content;
+  }
+  .footer {
+    position:absolute;
+    width: 100%;
+    height: 35vh; 
+    background-color: #1b3a61;
+    margin-top: 20vh;
+  }
