--- a/assessment/src/App.css
+++ b/assessment/src/App.css
@@ -3,6 +3,20 @@ body {
   /* font-family: 'Roboto Condensed', sans-serif;
      font-family: 'Roboto Slab', serif; */
 }
+button:default {
+  background-color: #0074c1;
+  color: white;
+}
+button:hover {
+  background-color: #225089;
+}
+button:active {
+  background-color: #1b3a61;
+}
+button:disabled {
+  background-color: #CCCCCC;
+}
+
 /* Main Search Section */
 .search-section {
   background-image: url("./assets/shutterstock_42474535.jpg");
@@ -39,13 +53,12 @@ body {
 }
 .main-search-button {
   border: 1px #0074c1;
-  background-color: #0074c1;
   display: flex;
   gap: 5px;
   padding: 0px 20px 0px 20px;
 }
 .main-search-button p {
-  color: #f3f6f9;
+  color: white;
   font-family: "Open Sans", sans-serif;
   font-weight: bold;
   letter-spacing: 0.5px;
@@ -78,10 +91,14 @@ body {
   margin-bottom: 40px;
   box-shadow: 0 1px 4px 0 #c3c3c3;
 }
+.cards-icon:hover {
+  border: solid 2px #225089;
+}
 .cards-icon img {
   height: 100px;
   width: 100px;
   padding-top: 2rem;
+  padding-left: 1rem;
 }
 .cards-text {
   color: #1b3a61;
@@ -125,6 +142,7 @@ body {
   justify-content: flex-start;
   column-gap: 2vw;
 }
+/* Updates Section */
 .updates-section {
   width: 37vw;
 }
@@ -157,6 +175,11 @@ background-color: #0074c1;
 color: white;
 padding: 15px 20px 15px 20px;
 }
+.view-more  a {
+    color: white;
+    text-decoration: none;
+}
+/* Calendar Section */
 .event-container {
   display: flex;
   gap: 30px;
@@ -226,10 +249,42 @@ margin-top: 13px;
   margin-top: 15vh;
   width: max-content;
   }
+  .view-all-events a {
+    color: white;
+    text-decoration: none;
+  }
+  /* Footer Section */
   .footer {
     position:absolute;
     width: 100%;
-    height: 35vh; 
     background-color: #1b3a61;
     margin-top: 20vh;
+    display: flex;
+    justify-content: space-evenly;
+    color: white;
+    padding: 20px 40px;
   }
+  .footer-title {
+    font-size: 18px;
+    font-weight: bold;
+  }
+  .footer-logo{
+    width: 135px;
+    height:135px;
+  }
+  .column-two {
+    display: flex;
+    flex-direction: column;
+  }
+  .column-two a {
+    text-decoration: none;
+    color: white;
+    padding: 0.5rem 1rem;
+  }
+  .footer-header {
+    color: #93a4bd;
+    font-weight: 700;
+    font-size: 14px;
+    margin: 0;
+  }
+ 
