--- a/assessment/src/App.css
+++ b/assessment/src/App.css
@@ -2,6 +2,11 @@ body {
   font-family: "Open Sans", sans-serif;
   /* font-family: 'Roboto Condensed', sans-serif;
      font-family: 'Roboto Slab', serif; */
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 button:default {
   background-color: #0074c1;
@@ -30,8 +35,8 @@ button:disabled {
   column-gap: 25px;
 }
 .nav-toggle {
-  height: 19.5vh;
-  width: 4vw;
+  height: 100%;
+  width: max-content;
   background-color: #0074c1;
   color: white;
   font-size: 10px;
@@ -117,7 +122,7 @@ button:disabled {
   margin-top: 0px;
 }
 .dropdown-right p {
-  color:#1b3a61;
+  color: #1b3a61;
   font-weight: 900;
   font-size: 20px;
 }
@@ -134,7 +139,7 @@ button:disabled {
   text-align: right;
   font-size: 16px;
   background-color: #0074c1;
-  width:27.8vw;
+  width: 27.8vw;
   height: 5vh;
   color: black;
   display: flex;
@@ -156,7 +161,6 @@ button:disabled {
   width: 10vw;
   margin-left: 10px;
   border: solid 1px white;
-
 }
 /* Main Search Section */
 .search-section {
@@ -392,6 +396,7 @@ button:disabled {
   padding: 15px 20px 15px 20px;
   margin-top: 15vh;
   width: max-content;
+  position: absolute;
 }
 .view-all-events a {
   color: white;
@@ -430,4 +435,16 @@ button:disabled {
   font-weight: 700;
   font-size: 14px;
   margin: 0;
+}
+@media (max-width: 700px) and (orientation: portrait) {
+  .pages {
+    flex-wrap: wrap;
+  }
+  .cards {
+      flex-wrap: wrap;
+  }
+  .main-searchbar {
+    flex-direction: column;
+    width: min-content;
+  }
 }
